# lgevers

./: index.html
assets/: index-BFLz-oRk.js  index-BIr_ax2Y.js  index-BZTjyYlh.js  index-C8RV4DIj.js  index-DK-SvApa.js  index-DuLc4yG9.js  index-WDS6G_0S.js  index-palskBen.js  index-zYHPNAcN.css
client/: package-lock.json  package.json  vite.config.ts
client/src/: index.css  main.tsx  types.ts
client/src/components/: ArticleCard.tsx  Chip.tsx  Footer.tsx  Header.tsx
client/src/routes/: __root.tsx  index.tsx
server/: main.py  pyproject.toml
